cluster/admin/observability/monitoring/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
spec:
  hosts:
    - "grafana.$(hostname)"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            port:
              number: 80
            host: monitoring-grafana.observability.svc.cluster.local
