cluster/admin/observability/monitoring/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: observability
spec:
  hosts:
    - "prometheus.$(hostname)"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            port:
              number: 9090
            host: monitoring-prometheus.observability.svc.cluster.local
